--- a/tictactoe.css
+++ b/tictactoe.css
@@ -1,5 +1,5 @@
 body {
-  background: linear-gradient(to bottom right, #293265, #2e2f36);
+  background: linear-gradient(to bottom right, #4a0260, #c38dd3);
   height: 100%;
   margin: 0;
   background-repeat: no-repeat;
@@ -16,22 +16,70 @@ body {
 }
 #title{
   width: 100%;
-  padding-top: 8%;
-  padding-bottom: 5%;
+  padding-top: 3%;
+  padding-bottom: 2%;
 }
 table {
   background-color: white;
-  width: 80%;
-  height: 500px;;
+  width: 60%;
+  height: 480px;
+
 }
 tr {
-  height: 30px
+  height: 33%;
 }
 td {
-  height: 30px;
-  border: 5px solid black;
+
+  border: 5px solid #3e104c;
   width: 33%;
+  height: 171px;
   font-size: 40pt;
   color: black;
-  padding: none;
+  padding: 0px;
+  margin: 0px;
+}
+#top-info {
+  width: 80%;
+  padding-bottom: 3%
+}
+#team {
+  width: 40%;
+  padding-right: 3%
+}
+#middle-doge {
+  width: 20%;
+}
+#choose-team {
+  width:40%
+}
+#team-letter-div {
+  width: 100%;
+  padding-left: 20%
+}
+#oh, #ex {
+  font-size: 45pt;
+}
+#middle-doge-img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 35px;
+  border: 5px solid #3e104c;
+}
+#message {
+  font-size: 20pt;
+  text-align: center;
+}
+#doge-win-img {
+  width: 100%
+}
+#reset {
+  padding-left: 20%
+}
+#bottom-text {
+  padding-top: 2%;
+  padding-bottom: 5%;
+}
+a:link {
+  color: #3e104c;
+  text-decoration: none;
 }
